fix(modal-box): fix desc spacing, update docs

--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -93,10 +93,6 @@
     padding-bottom: var(--pf-c-modal-box__header--last-child--PaddingBottom);
   }
 
-  + .pf-c-modal-box__description {
-    --pf-c-modal-box__description--PaddingTop: var(--pf-c-modal-box__header--description--PaddingTop);
-  }
-
   + .pf-c-modal-box__body {
     --pf-c-modal-box__body--PaddingTop: var(--pf-c-modal-box__header--body--PaddingTop);
   }
